[package]
name = "prototype"
version = "0.1.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbpro = "0.4.0"
tokio = { version = "0.2.6", features = ["full"] }
serde_json = "1.0.44"
futures = "0.3.1"
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4"] }
chrono = "0.4.10"