[package]
name = "cbpro-rsi-bot"
version = "0.1.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbpro = "0.4.0"
tokio = { version = "0.2.9", features = ["full"] }
serde_json = "1.0.44"
futures = { version = "0.3.1", features = ["async-await"] }
tokio-postgres = { version = "0.5.1", features = ["with-chrono-0_4", "with-uuid-0_8"] }
chrono = "0.4.10"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "1.4.0"
clap = "2.33.0"