[package]
name = "cbbot"
version = "0.1.0"
authors = ["kgeronim <kevin.geronimo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbpro = "0.7.1"
tokio = { version = "0.2.11", features = ["full"] }
serde_json = "1.0.45"
futures = { version = "0.3.1", features = ["async-await"] }
chrono = "0.4.10"
log = { version = "0.4", features = ["std", "serde"] }
simple_logger = "1.5.0"
clap = "2.33.0"